syntax = 'proto3';

package proto.product.v1;

import "google/protobuf/timestamp.proto";

message Product {
  string id = 1;
  string product_name = 2;
  string description = 3;
  string artist_id = 4;
  string genre_id = 5;
  string release_date = 6;
  uint32 stock = 7;
  uint32 price = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  string id = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message UpdateProductResponse {
  // empty
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  // empty
}
